Fix scrollbar always showing on old mini editors
Fixes atom/atom#3176

--- a/stylesheets/settings-view.less
+++ b/stylesheets/settings-view.less
@@ -64,9 +64,11 @@
 
     .editor.mini,
     .editor.mini.is-focused {
-      font-size: @input-font-size;
-      line-height: @component-line-height + 3;
-      max-height: @component-line-height + 3; // +2 for borders
+      &.react {
+        font-size: @input-font-size;
+        line-height: @component-line-height + 3;
+        max-height: @component-line-height + 3; // +2 for borders
+      }
       color: @text-color;
       background-color: #fff;
 
